\name{ips-news}
\alias{ips-news} 
\title{News and changes to the ips (formerly: phyloch) package}
\section{VERSION 0.0-8}{
\subsection{IMPROVED FEATURES}{
   \itemize{
    \item \code{write.nex} can now handle multiple DNA sequence alignments.
    \item Argument \code{interleave} of functions \code{write.fas}, \code{write.phy}, and \code{write.nex} has been renamed to \code{block.width} for clarity.
   } 
  }
  \subsection{DEPRECATED FEATURES}{
   \itemize{
    \item \code{write.partioned.nex} will be removed soon from the package; its functionality has been integrated into \code{write.nex}.
   } 
  }
  \subsection{BUG FIXES}{
   \itemize{
    \item The argument \code{run = TRUE} in functions \code{mrbayes} and \code{mrbayes.mixed} was broken on Windows platforms. (Thanks to Liam Revell and Klaus Schliep for report ans fix).
   } 
  }
}
\section{VERSION 0.0-7}{ 
  \subsection{NEW FEATURES}{
    \itemize{
      \item The function \code{mafft} received the additional argument \code{options}, which can be used to request options such as e.g. --adjustdirection that are not build into the function's interface.
      \item This version includes a new internal function \code{phylo2mafft}, which does exactly the same thing as the RUBY script newick2mafft.rb on the MAFFT website (\url{http://mafft.cbrc.jp/alignment/software/newick2mafft.rb}): it converts a user-defined guide tree into a format readible by MAFFT.
      \item The functions \code{delete.empty.cells} and \code{fillEndsWithN} are now using Emanuel Paradis' bit-level coding for DNA sequences, which makes them much faster.
    }
  }
  \subsection{DEPRECATED FEATURES}{
    \itemize{
      \item The function \code{c.genes} has been superseeded by the cbind method for object of class \code{"DNAbin"} provided in the package ape; \code{c.genes} will be removed in one of the following versions.
    }
  }
}
\section{CHANGES IN PHYLOCH VERSION 1.5-6}{
  \subsection{NEW FEATURES}{
    \itemize{