@@ -1,5 +1,5 @@
 ## This code is part of the ips package
-## © C. Heibl 2014 (last update 2015-10-29)
+## © C. Heibl 2014 (last update 2016-01-26)
 
 matrixBlock <- function(x, block.width){
   
@@ -10,10 +10,17 @@ matrixBlock <- function(x, block.width){
   
   # assemble matrix
   # ---------------
-  m <- as.character(x)
-  m <- apply(m, 1, paste, collapse = "")
-  m <- apply(pt, 1, function(m, i) substr(m, i[1], i[2]), m = m)
-  m <- as.vector(m)
-  m <- paste(rep(rownames(x), nrow(pt)), unlist(m))
+  if ( inherits(x, "DNAbin") ){
+    m <- as.character(x)
+    m <- apply(m, 1, paste, collapse = "")
+    m <- apply(pt, 1, function(m, i) substr(m, i[1], i[2]), m = m)
+    m <- as.vector(m)
+    m <- paste(rep(rownames(x), nrow(pt)), unlist(m))
+  } else {
+    m <- apply(pt, 1, function(m, i) m[, i[1]:i[2]], m = x)
+    m <- lapply(m, function(z) apply(z, 1, paste, collapse = ""))
+    m <- unlist(m)
+    m <- paste(rep(rownames(x), nrow(pt)), unlist(m))
+  }
   m
 }
